kubernetes/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: schedulesync-api
spec:
  type: LoadBalancer
  ports:
    - port: 3000
  selector:
    app: schedulesync-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schedulesync-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: schedulesync-api
  template:
    metadata:
      labels:
        app: schedulesync-api
    spec:
      containers:
        - name: schedulesync-api
          image: missaelcorm/schedulesync-api:latest
          ports:
            - containerPort: 3000
